# panini

./: .gitignore  404.html  ARCHITECTURE.md  Cargo.toml  README.md  aggregators_doc.md  analysis_component_doc.md  clippy_report.txt  clippy_report_detailed.txt  index.html  languages_doc.md  mkdocs.yml  panini.example.toml  progress.md  python_usage.md  remarks_docu.md  rust_usage.md  sitemap.xml
.github/workflows/: docs.yml  publish-panini-lang.yml
aggregation/: index.html
aggregation/custom/: index.html
aggregation/digests/: index.html
components/: index.html
components/creating/: index.html
components/pipeline/: index.html
docs/: examples.md  index.md
docs/aggregation/: custom.md  digests.md  index.md
docs/components/: creating.md  index.md  pipeline.md
docs/guides/: cli.md  python.md  rust.md
docs/languages/: adding.md  agglutination.md  index.md
examples/: README.md  index.html
examples/data/: arabic_sample.txt  turkish_sample.txt
examples/python/: arabic_pivot_aggregation.py  environment_check.py  helper.py  lexicon_data.json  lexicon_explorer.html  requirements.txt  turkish_segmentation.py
examples/rust/: Cargo.toml
guides/cli/: index.html
guides/python/: index.html
guides/rust/: index.html
languages/: index.html
languages/adding/: index.html
languages/agglutination/: index.html
panini/: Cargo.toml
panini-cli/: Cargo.toml
panini-cli/prompts/: default.yml
panini-cli/src/: add_language.rs  config.rs  main.rs
panini-core/: Cargo.toml
panini-core/src/: aggregable.rs  component.rs  domain.rs  lib.rs  morpheme.rs  morphology_enums.rs  text_processing.rs  traits.rs
panini-core/src/aggregable/: digest.rs
panini-core/src/components/: leipzig.rs  mod.rs  morpheme_segmentation.rs  morphology.rs  multiword.rs  pedagogical.rs
panini-engine/: Cargo.toml
panini-engine/src/: composer.rs  extractor.rs  lib.rs  llm.rs  llm_utils.rs  prompts.rs
panini-langs/: Cargo.toml
panini-langs/src/: arabic.rs  danish.rs  french.rs  italian.rs  lib.rs  polish.rs  registry.rs  turkish.rs
panini-macro/: Cargo.toml
panini-macro/src/: aggregable_fields.rs  closed_values.rs  grammatical_function_catalog.rs  helpers.rs  lib.rs  morphology_info.rs  panini_result.rs
panini/src/: lib.rs
pynini/: Cargo.toml  README.md  errors.txt  pyproject.toml  test_pynini.py
pynini/src/: aggregation.rs  extraction.rs  lib.rs  metadata.rs
search/: search_index.json
