[package]
name = "panini-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "panini"
path = "src/main.rs"

[dependencies]
panini-engine = { path = "../panini-engine" }
panini-langs = { path = "../panini-langs", features = ["registry"] }
rig-core = "0.33"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
