[package]
name = "panini-core"
version = "0.2.0"
edition = "2024"

[dependencies]
panini-macro = { path = "../panini-macro" }
schemars = { version = "1.2.1", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
isolang = { version = "2.4.0", features = ["english_names"] }
iso15924 = "0.1.0"
thiserror = "2"
regex = "1"
