[package]
name = "panini-engine"
version = "0.2.0"
edition = "2024"
description = "Execution engine for the Panini linguistic feature extraction framework"
repository = "https://github.com/yro7/panini.git"
license = "MIT"
keywords = ["linguistics", "nlp", "llm", "extraction", "engine"]
categories = ["science", "text-processing"]

[dependencies]
panini-core = { path = "../panini-core" }
rig-core = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
schemars = "1.0.4"
anyhow = "1.0.102"
bon = "3"
regex = "1"
tracing = "0.1"
thiserror = "2.0.18"
isolang = { version = "2.4.0", features = ["english_names"] }
jsonschema = "0.45.0"
backoff = { version = "0.4", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
