[package]
name = "panini-langs"
version = "0.2.0"
edition = "2024"

[dependencies]
panini-core = { path = "../panini-core" }
panini-macro = { path = "../panini-macro" }
schemars = "1.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional: needed for the language registry (panini-cli)
panini-engine = { path = "../panini-engine", optional = true }
anyhow = { version = "1", optional = true }
rig-core = { version = "0.33", optional = true }

[features]
registry = ["dep:panini-engine", "dep:anyhow", "dep:rig-core"]
