[package]
name = "panini-macro"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for the Panini linguistic feature extraction framework"
repository = "https://github.com/yro7/panini.git"
license = "MIT"
keywords = ["linguistics", "nlp", "llm", "extraction", "macros"]
categories = ["development-tools::procedural-macros", "science", "text-processing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
