[package]
name = "panini"
version = "0.2.0"
edition = "2024"
description = "Main entry point and orchestration for the Panini linguistic feature extraction framework"
repository = "https://github.com/yro7/panini.git"
license = "MIT"
keywords = ["linguistics", "nlp", "llm", "extraction"]
categories = ["science", "text-processing"]
readme = "../README.md"


[dependencies]
panini-core = { path = "../panini-core" }
panini-engine = { path = "../panini-engine" }
panini-macro = { path = "../panini-macro" }
panini-langs = { path = "../panini-langs", optional = true }
rig-core = "0.33"

[features]
default = ["langs"]
langs = ["dep:panini-langs"]
