[package]
name = "pynini"
version = "0.1.0"
edition = "2021"

[lib]
name = "panini"
crate-type = ["cdylib"]

[dependencies]
panini-engine = { path = "../panini-engine" }
panini-langs = { path = "../panini-langs", features = ["registry"] }
panini-core = { path = "../panini-core" }
rig-core = "0.33"
tokio = { version = "1.0", features = ["full"] }
pyo3 = { version = "0.22.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22.0", features = ["tokio-runtime"] }
serde_json = "1.0"
serde_yml = "0.0.12"
pythonize = "0.22.0"
anyhow = "1"
