[package]
name = "pynini"
version = "0.2.0"
edition = "2021"
description = "Python bindings for the Panini linguistic feature extraction framework"
repository = "https://github.com/yro7/panini.git"
license = "MIT"
keywords = ["linguistics", "nlp", "llm", "extraction", "python"]
categories = ["api-bindings", "science", "text-processing"]

[lib]
name = "panini"
crate-type = ["cdylib"]

[dependencies]
panini-engine = { path = "../panini-engine" }
panini-langs = { path = "../panini-langs", features = ["registry"] }
panini-core = { path = "../panini-core" }
rig-core = "0.33"
tokio = { version = "1.0", features = ["full"] }
pyo3 = { version = "0.22.0", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.22.0", features = ["tokio-runtime"] }
serde_json = "1.0"
serde_yml = "0.0.12"
pythonize = "0.22.0"
anyhow = "1"
