[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pynini"
version = "0.1.0"
description = "Python bindings for the Panini morphological extraction engine."
readme = "README.md"
authors = [{ name = "Panini Contributors" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
