[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "panini-lang"
version = "0.1.0"
description = "Python bindings for the Panini morphological extraction engine."
readme = "README.md"
authors = [{ name = "Panini Contributors" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Repository = "https://github.com/yro7/panini"

[tool.maturin]
features = ["pyo3/extension-module"]
