[package]
name = "panini-examples"
version = "0.2.0"
edition = "2024"
description = "Usage examples for the Panini linguistic feature extraction framework"
repository = "https://github.com/yro7/panini.git"
license = "MIT"
keywords = ["linguistics", "nlp", "llm", "extraction", "examples"]
categories = ["science", "text-processing"]
readme = "../../README.md"

[dependencies]
panini = { path = "../../panini" }
panini-core = { path = "../../panini-core" }
panini-langs = { path = "../../panini-langs", features = ["registry"] }
panini-engine = { path = "../../panini-engine" }
rig-core = "0.33"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"



[[bin]]
name = "turkish_segmentation"
path = "src/bin/turkish_segmentation.rs"

[[bin]]
name = "arabic_pivot_aggregation"
path = "src/bin/arabic_pivot_aggregation.rs"
